styles.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: rgb(68, 68, 68);
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: rgb(51, 51, 51);
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: rgb(255, 255, 255);
  border: 0.05rem solid rgb(255, 255, 255);
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: rgb(255, 255, 255);
  border: 0;
  font-family: 'Poppins', sans-serif;
  padding: 0;
}

body {
  display: -ms-flexbox;
  display: flex;
  color: rgb(33, 39, 40);
  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
}

header {
  background: rgb(255,54,78);
  background: linear-gradient(90deg, rgba(255,54,78,1) 0%, rgba(91,4,4,1) 100%);
  flex: 1;
}

main {
  flex: 10;
  position: relative;
}

main > * {
  z-index: 100;
}

main > canvas {
  height: 100%;
  position: absolute;
  width: 100%;
  z-index: 1;
}

footer {
  background: rgb(255,255,255);
  flex: 1;
}

footer .btn:hover {
  border: 1px solid rgb(68, 68, 68);
}

.nav-link {
  color: rgb(255,255,255);
}

.nav-link:hover {
  color: rgb(230,230,230);
}

/*
 * Dark mode styles
 */

@media (prefers-color-scheme: dark) {
  main, footer {
    background: rgb(33,39,40);
    color: rgb(255,255,255);
  }
}

